--- a/src/assets/css/_normalize.scss
+++ b/src/assets/css/_normalize.scss
@@ -8,5 +8,5 @@ body, html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     padding: 0;
-    margin: 0;
+    margin: 10px;
 }
